Environment variable test

--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -7,4 +7,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.divio.com/introduction/01-installation/"> deploying Web apps with Divio</a>.</p>
+    <p>Environment variable: @ViewData["EnvironmentVariable"]</p>
 </div>
